src/components/layout.scss
$linkhormal: #39c;
$linkhover: #94c;
$cardborder: #f4f4f4;
$commentline: #c2c2c2;
$addcomment: #a3f4b7;
$logosize: 1650;

.dialog-back {
  display: none !important;
}

@media only screen and (min-width: 769px) {
  /* styles for browsers larger than 788px (larger than ipad resolution, standard version); */
  .main-container {
    margin: 0;
    height: 100vh;
    display: flex;

    header {
      float: left;
      position: fixed;
      width: 270px;

      a {
        color: $linkhormal;
        font-weight: bold;
        text-decoration: none;

        &:hover {
          color: $linkhover;
        }
      }
    }

    .navbar-container {
      position: fixed;
      float: left;
      bottom: -5px;
      width: 180px;
      .navbar-contents {

        .logo {
          position: relative;
          bottom: 0;
          left: 0;
          width: 100%;
          height: auto;
          padding-top: -1px;
          box-shadow: 4px 2px 4px -4px rgba(0, 0, 0, 0.2), 8px 4px 8px -4px rgba(0, 0, 0, 0.19);
          border-radius: 0 20px 0 0;
        }
      }
    }

    .content-container {
      position: absolute;
      top: 0;
      margin: 0;
      height: 100vh;
      width: 100%;
      align-self: flex-end;
    }

  }

  input:-webkit-autofill {
    -webkit-box-shadow: 0 0 0 130px white inset !important;
    -webkit-text-fill-color: rgba(0, 0, 0, 0.87) !important;
    background-color: white !important;
    color: rgba(0, 0, 0, 0.87) !important;
  }

  .flex-center {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  html, body {
    height: 100%;
    width: 100%;
    margin: 0;
  }

  h1 {
    text-align: center;
  }

  .login-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 380px;
  }

  .drawer > div {
    width: 160px !important;
  }

  .card-media {
    height: 300px;
    overflow: hidden;
    display: flex;
    justify-content: center;
    img {
      object-fit: cover;
      height: 100%;
      min-width: 50%;
      float: top;
    }
  }

  .cardList {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
    border-radius: 2px;
    margin: 10px auto;
    display: flex;
    font-weight: bold;
    text-align: center;
    flex-direction: column;
    border: solid $cardborder;
    * {
      padding: 10px;
      flex: 1 100%;
    }

    h1 {
      border-bottom: solid $cardborder;
      padding: 20px 0 5px 0;
      margin: 5px;
      text-align: center;
    }

    .cardContainer {
      display: flex;
      height: 40%;
      .cardImage, .pAndButtons {
        width: 50%;
        display: inline-flex;
      }
      .cardImage {
        width: 150px;
        overflow: hidden;
        justify-content: center;
        img {
          object-fit: contain;
          max-height: 33vh;
        }
      }
      .pAndButtons {
        flex-direction: column;
        p {
          margin: 5px;
        }
        .buttons {
          display: flex;
          justify-content: center;
          flex-direction: column;
          padding: 10px auto;
          height: 100% !important;
          .cardButton {
            padding: 5px !important;
            height: 50px !important;
            div {
              line-height: normal;
              text-align: center;
              margin: -10px auto;
            }
          }
        }
      }

    }
  }

  .commentDialog {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
    border-radius: 2px;
    margin: 10px auto;
    font-weight: bold;

    .commentBox {
      padding: 10px;
      margin: 5px;

      .addCommentButton {
        background: $addcomment !important;
        display: inline-block !important;
      }

    }

    h3 {
      border-bottom: solid $cardborder;
      padding: 5px;
      margin: 5px;
      text-align: center;
    }

    .comment {
      padding: 5px;
      margin: 10px;
      border: solid $cardborder;
      .username {
        text-align: right;
        padding: 5px;
      }
      p {
        padding: 5px;
      }

      h1 {
        border-bottom: solid $cardborder;
        border-left: solid $cardborder;
        border-right: solid $cardborder;
        font-size: inherit;
        text-align: center;
      }
    }
  }

  .title {
    font-size: 22px;
    font-weight: 400;
    padding: 10px;
    background-color: #48b5e9;
    color: white;
    margin: 1px;
    border-radius: 2px 2px 0 0;
  }

  .description {
    display: flex;
    height: auto;
    margin: 10px 5px;

    .photo {
      display: inline-block;
      width: 50%;
      height: 50%;
      border-radius: 2px 2px 0 0;
    }
    .text {
      margin: 10px auto auto 10px;
      display: inline-block;
      font-size: 18px;
      width: 50%;
      height: 100%;
    }
  }

  .cards {
    width: 60%;
    float: right;
    padding-right: 8.8%;

    input {
      width: 99.5%;
      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
      box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
      border-radius: 2px;
      margin: 10px auto;
      text-align: center;
      border: solid $cardborder;
      height: 30px;
    }
  }

  .formBox {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
    border-radius: 2px;
    margin: 10px auto;
    padding: 10px;
    font-weight: bold;
    text-align: center;
    border: solid $cardborder;
    width: 40%;
  }

  .nav-bar-container {
    display: flex;
    flex-direction: column;
    min-width: 200px;
  }

}
/* ... */

